# Context

./: .gitignore  CMakeLists.txt  ReadMe.md
src/: context.cpp  context.hpp  main.cpp  scalar.cpp  scalar.hpp
